Fix tablet hero layout issue

--- a/_sass/_airspace.scss
+++ b/_sass/_airspace.scss
@@ -65,6 +65,7 @@ header {
   left: 0;
   width: 100%;
   z-index: 999;
+  background: #fe711c;
   &.bg {
     background: rgba(0,0,0,.2);
   }
